matomo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: matomo-ingress
  namespace: matomo
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/limit-rps: "20"
spec:
  tls:
  - hosts:
    - "stats.safesecs.io"
    secretName: letsencrypt-certs-all
  rules:
    - host: stats.safesecs.io
      http:
        paths:
          - path: "/.well-known/acme-challenge"
            backend:
              serviceName: letsencrypt-helper-svc
              servicePort: 9000
          - path: "/"
            backend:
              serviceName: matomo
              servicePort: 9000
